# python-point-system

./: LICENSE  README.md  pyproject.toml
PointSystem/: Economy.py  KeepRefs.py  Points.py
examples/: Docs-Econ.py  Docs.py  Economy test.py  example-tkinter.py
src/PointSystem_Totallyahuman15/: PointSystem.py  example.py
